Closed
Bug 379723
Opened 18 years ago
Closed 18 years ago
gtk_moz_embed_set_directory_service_provider not in glue
Categories
(Core Graveyard :: Embedding: GTK Widget, defect)
Tracking
(Not tracked)
RESOLVED
FIXED
People
(Reporter: tomeu, Unassigned)
References
Details
Attachments
(1 file)
|
680 bytes,
patch
|
timeless
:
review+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (X11; U; Linux i686; en-GB; rv:1.8.1.2) Gecko/20060601 Firefox/2.0.0.2 (Ubuntu-edgy)
Build Identifier: Trunk
gtk_moz_embed_set_directory_service_provider should be in glue for embedders to be able to add it's own dirs.
Reproducible: Always
Steps to Reproduce:
1.
2.
3.
| Reporter | ||
Comment 1•18 years ago
|
||
Attachment #263728 -
Flags: review?
| Reporter | ||
Updated•18 years ago
|
Attachment #263728 -
Flags: review? → review?(timeless)
Comment 2•18 years ago
|
||
Can this patch be reviewed please? It's just a one liner.
Updated•18 years ago
|
Status: UNCONFIRMED → NEW
Ever confirmed: true
Comment on attachment 263728 [details] [diff] [review]
add gtk_moz_embed_set_directory_service_provider to glue funcs
do you need someone to commit this?
Attachment #263728 -
Flags: review?(timeless) → review+
| Reporter | ||
Comment 4•18 years ago
|
||
Yes, please.
Comment on attachment 263728 [details] [diff] [review]
add gtk_moz_embed_set_directory_service_provider to glue funcs
mozilla/embedding/browser/gtk/src/gtkmozembed_glue.cpp 1.7
| Assignee | ||
Updated•14 years ago
|
Product: Core → Core Graveyard
You need to log in
before you can comment on or make changes to this bug.
Description
•