Bug 379723 gtk_moz_embed_set_directory_service_provider not in gluepatch by tomeu@tomeuvizoso.net r=timeless